[metadata]
name = itertypes
version = attr: itertypes.__version__
author = Kreusada
author_email = kreusadaprojects@gmail.com
description = A small library used to obtain types for various builtin iterators.
url = https://github.com/Kreusada/itertypes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
